# diverseSelect

./: .gitignore  README.md
dacs_core/: diverseSelect.py  optimizers.py  ostUtils.py  vanillaBH.py
divSelect/: README.md  environment.yml  pyproject.toml  setup.py
divSelect/dacs/: __init__.py  solver.py
divSelect/dacs/src/: py_dacs_core.cpp
drug_exper/: cleaned_drug_data.csv  data_preprocess.ipynb  drug_collate_markowitz_results.py  drug_collate_sharpe_results.py  drug_optimized_markowitz_get_histogram.py  drug_optimized_sharpe_get_histogram.py  get_aminos.ipynb  gpcr_interactions.csv  local_collate_markowitz_results.py  local_collate_sharpe_results.py  plotting_code.Rmd  sherlock_markowitz_drug_driver.py  sherlock_sharpe_drug_driver.py  sherlock_train_dti.py
drug_exper/permutations/: perm_j0.npy  perm_j1.npy  perm_j10.npy  (+2497 more)
hiring_exper/: hiring_exper.ipynb  plotting_code.Rmd
sharpe-markowitz_sims_settings1-2/: collate_markowitz_results.py  collate_sharpe_results.py  dgps.py  local_collate_markowitz_results.py  local_collate_sharpe_results.py  optimized_markowitz_get_histogram.py  optimized_sharpe_get_histogram.py  plotting_code.Rmd  sherlock_markowitz_driver.py  sherlock_markowitz_driver_cvxpy.py  sherlock_sharpe_driver.py  sherlock_sharpe_driver_cvxpy.py
sharpe-markowitz_sims_settings3-4/: collate_markowitz_results.py  collate_sharpe_results.py  dgps.py  local_collate_markowitz_results.py  local_collate_sharpe_results.py  optimized_markowitz_get_histogram.py  optimized_sharpe_get_histogram.py  plotting_code.Rmd  scores.py  sherlock_markowitz_driver.py  sherlock_sharpe_driver.py
underrep_sims/: collate_results.py  collate_results_100.py  dgps.py  plotting_code.Rmd  runscript.sh  scores.py  sherlock_cluster_driver.py  sherlock_cluster_driver_100.py
(+1 files in other folders)
