[project]
name = "dacs"
version = "0.0.9"
authors = [
    { name="Yash Nair", email="yashnair@stanford.edu" },
]
maintainers = [
    { name="Yash Nair", email="yashnair@stanford.edu" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
description = ""
license = {file = "LICENSE"}
keywords = ["FDR"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.2, <2",
]

[tool.poetry]
name = "dacs"
version = "0.0.0"
description = ""
authors = [
    "Yash Nair <yashnair@stanford.edu>",
]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.24.2"
matplotlib = ">=3.7.0, <4"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
cvxpy = "^1.3.1"
mosek = {version = "^10.1.27", python = ">=3.9,<3.13"}

[tool.poetry.group.dev.dependencies]
pybind11 = "^2.11.1"
jupyter = "^1.0.0"
jupytext = "^1.14.5"
tqdm = "^4.65.0"

[tool.jupytext]
notebook_metadata_filter = "-all"
cell_metadata_filter = "-all"

[build-system]
requires = [
    "setuptools", 
    "wheel",
    "pybind11",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-frontend = "build"

[tool.setuptools_scm]